--- a/mit6824_lab1/CMakeLists.txt
+++ b/mit6824_lab1/CMakeLists.txt
@@ -1,44 +1,59 @@
 cmake_minimum_required(VERSION 3.0)
 project(IMAGINE_DEMO_LAB1)
 
-set(IMAGINE_SYSTEM_DIR ${PROJECT_SOURCE_DIR}/thirdparty/Imagine_System)
-add_subdirectory(${IMAGINE_SYSTEM_DIR})
-add_subdirectory(${IMAGINE_SYSTEM_DIR}/worker/Imagine_MapReduce)
-add_subdirectory(${IMAGINE_SYSTEM_DIR}/worker/Imagine_Rpc)
-add_subdirectory(${IMAGINE_SYSTEM_DIR}/worker/Imagine_ZooKeeper)
-add_subdirectory(${IMAGINE_SYSTEM_DIR}/worker/Imagine_Muduo)
+message("[Constructing PROJECT][Imagine Demo_LAB1]: Starting project building, project name is ${PROJECT_NAME}...")
 
-# include_directories(${PROJECT_SOURCE_DIR}/include)
-# file(GLOB SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+set(IS_MAKE_PROJECT true)
+set(IMAGINE_SYSTEM_DIR ${PROJECT_SOURCE_DIR}/thirdparty/Imagine_System)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+set(IMAGINE_LIB_WORKER_DIR ${PROJECT_SOURCE_DIR}/thirdparty/Imagine_System/worker)
+
+if(EXISTS ${IMAGINE_SYSTEM_DIR}/CMakeLists.txt)
+    message("[Constructing PROJECT][Imagine Demo_LAB1]: thirdparty Imagine_System exists, add subModule...")
+    add_subdirectory(${IMAGINE_SYSTEM_DIR})
+else()
+    message("[Constructing PROJECT][Imagine Demo_LAB1]: thirdparty Imagine_System NOT exists, cin make init to init it!")
+endif()
+
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 add_executable(imagine_mapreduce_master ${CMAKE_CURRENT_SOURCE_DIR}/src/master.cpp)
 add_executable(imagine_mapreduce_mapper ${CMAKE_CURRENT_SOURCE_DIR}/src/mapper.cpp)
 add_executable(imagine_mapreduce_reducer ${CMAKE_CURRENT_SOURCE_DIR}/src/reducer.cpp)
 
-# add_custom_target(
-#     init
-#     COMMAND python3 init.py
-#     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # 在哪个目录下执行命令
-# )
-
 add_custom_target(
-    imagine_mapreduce_make
-    message("Init")
+    init
+    COMMAND python3 init.py
+    echo "[Constructing PROJECT][Imagine Demo_LAB1]: Starting project target init is building..."
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # 在哪个目录下执行命令
 )
 
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/Imagine_System/worker/Imagine_MapReduce/lib)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/Imagine_System/worker/Imagine_Muduo/lib)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/Imagine_System/worker/Imagine_Rpc/lib)
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/Imagine_System/worker/Imagine_ZooKeeper/lib)
+if(EXISTS ${IMAGINE_SYSTEM_DIR}/CMakeLists.txt)
+    add_custom_target(
+        prepare
+        echo "[Constructing PROJECT][Imagine Demo_LAB1]: thirdparty Imagine_System exists, Starting project target prepare building..."
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # 在哪个目录下执行命令
+    )
+    add_dependencies(prepare system_prepare)
 
-add_dependencies(imagine_mapreduce_master init_all)
-add_dependencies(imagine_mapreduce_mapper init_all)
-add_dependencies(imagine_mapreduce_reducer init_all)
-add_dependencies(imagine_mapreduce_master init_all imagine_mapreduce imagine_zookeeper imagine_rpc imagine_muduo)
-add_dependencies(imagine_mapreduce_mapper init_all imagine_mapreduce imagine_zookeeper imagine_rpc imagine_muduo)
-add_dependencies(imagine_mapreduce_reducer init_all imagine_mapreduce imagine_zookeeper imagine_rpc imagine_muduo)
-add_dependencies(imagine_mapreduce_make imagine_mapreduce_master imagine_mapreduce_mapper imagine_mapreduce_reducer)
-
-target_link_libraries(imagine_mapreduce_master pthread imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo)
-target_link_libraries(imagine_mapreduce_mapper pthread imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo)
-target_link_libraries(imagine_mapreduce_reducer pthread imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo)
+    if(TARGET system_build)
+        add_custom_target(
+            build
+            echo "[Constructing PROJECT][Imagine Demo_LAB1]: Starting project target build building..."
+            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # 在哪个目录下执行命令
+        )
+        # target_link_libraries(imagine_mapreduce_master imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
+        # target_link_libraries(imagine_mapreduce_mapper imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
+        # target_link_libraries(imagine_mapreduce_reducer imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
+        target_link_libraries(imagine_mapreduce_master imagine_mapreduce)
+        target_link_libraries(imagine_mapreduce_mapper imagine_mapreduce)
+        target_link_libraries(imagine_mapreduce_reducer imagine_mapreduce)
+        add_dependencies(imagine_mapreduce_master system_build)
+        add_dependencies(imagine_mapreduce_mapper system_build)
+        add_dependencies(imagine_mapreduce_reducer system_build)
+        add_dependencies(build imagine_mapreduce_master imagine_mapreduce_mapper imagine_mapreduce_reducer)
+    else()
+        message("[Constructing PROJECT][Imagine Demo_LAB1]: Please cin make prepare to make every subModule ready!")
+    endif()
+else()
+    message("[Constructing PROJECT][Imagine Demo_LAB1]: thirdparty Imagine_System NOT exists, cin make init to init it!")
+endif()
