--- a/mit6824_lab1/CMakeLists.txt
+++ b/mit6824_lab1/CMakeLists.txt
@@ -3,6 +3,16 @@ project(IMAGINE_DEMO_LAB1)
 
 message("[Constructing PROJECT][Imagine Demo_LAB1]: Starting project building, project name is ${PROJECT_NAME}...")
 
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g  -std=c++17 -Wall -Werror")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17 -Wall -Werror")
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -g -O0")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g -O0")
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -g")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+
+
 set(IS_MAKE_PROJECT true)
 set(IMAGINE_SYSTEM_DIR ${PROJECT_SOURCE_DIR}/thirdparty/Imagine_System)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
@@ -19,6 +29,7 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 add_executable(imagine_mapreduce_master ${CMAKE_CURRENT_SOURCE_DIR}/src/master.cpp)
 add_executable(imagine_mapreduce_mapper ${CMAKE_CURRENT_SOURCE_DIR}/src/mapper.cpp)
 add_executable(imagine_mapreduce_reducer ${CMAKE_CURRENT_SOURCE_DIR}/src/reducer.cpp)
+add_executable(imagine_rpc_zookeeper ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcZooKeeperMain.cpp)
 
 add_custom_target(
     init
@@ -41,16 +52,15 @@ if(EXISTS ${IMAGINE_SYSTEM_DIR}/CMakeLists.txt)
             echo "[Constructing PROJECT][Imagine Demo_LAB1]: Starting project target build building..."
             WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} # 在哪个目录下执行命令
         )
-        # target_link_libraries(imagine_mapreduce_master imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
-        # target_link_libraries(imagine_mapreduce_mapper imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
-        # target_link_libraries(imagine_mapreduce_reducer imagine_mapreduce imagine_rpc imagine_zookeeper imagine_muduo pthread)
         target_link_libraries(imagine_mapreduce_master imagine_mapreduce)
         target_link_libraries(imagine_mapreduce_mapper imagine_mapreduce)
         target_link_libraries(imagine_mapreduce_reducer imagine_mapreduce)
+        target_link_libraries(imagine_rpc_zookeeper imagine_rpc)
         add_dependencies(imagine_mapreduce_master system_build)
         add_dependencies(imagine_mapreduce_mapper system_build)
         add_dependencies(imagine_mapreduce_reducer system_build)
-        add_dependencies(build imagine_mapreduce_master imagine_mapreduce_mapper imagine_mapreduce_reducer)
+        add_dependencies(imagine_rpc_zookeeper system_build)
+        add_dependencies(build imagine_mapreduce_master imagine_mapreduce_mapper imagine_mapreduce_reducer imagine_rpc_zookeeper)
     else()
         message("[Constructing PROJECT][Imagine Demo_LAB1]: Please cin make prepare to make every subModule ready!")
     endif()
