--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "mit6824_lab1/thirdparty/Imagine_Tool"]
+	path = mit6824_lab1/thirdparty/Imagine_Tool
+	url = https://github.com/ImagineJHY/Imagine_Tool.git
 [submodule "mit6824_lab1/thirdparty/Imagine_System"]
 	path = mit6824_lab1/thirdparty/Imagine_System
-	url = git@github.com:ImagineJHY/Imagine_System.git
+	url = https://github.com/ImagineJHY/Imagine_System.git
