--- a/mit6824_lab1/Makefile
+++ b/mit6824_lab1/Makefile
@@ -1,15 +1,30 @@
 .PHONY: build test
 
+system_file_name=./thirdparty/Imagine_System
+tool_file_name=./thirdparty/Imagine_Tool
+
 all: clean init prepare build
 
 init:
-	cd build && make init
-
+	python3 init.py
 prepare:
-	cd build && cmake .. && make prepare
+ifneq (${wildcard ${system_file_name}},)
+	@echo "Imagine_System exists"
+else
+	@echo -e "\033[;31mImagine_System NOT exist, Please exucete make init to init it\033[0m"
+	exit 1
+endif
+ifneq (${wildcard ${tool_file_name}},)
+	@echo "Imagine_Tool exists"
+else
+	@echo -e "\033[;31mImagine_Tool NOT exist, Please exucete make init to init it\033[0m"
+	exit 1
+endif
+	cd ${system_file_name} && make prepare
+	cd ${tool_file_name} && make prepare
 
 build:
-	cd build && cmake .. && make build
+	cd build && cmake .. && make imagine_muduo
 
 clean:
 	cd build && make clean
@@ -18,9 +33,3 @@ clean:
 
 test:
 	find test | grep -vE "^test$$|testfile.txt$$|test\.sh$$" | xargs rm -rf && ./test/test.sh
-
-init_bak:
-	cd build && make init_bak
-
-prepare_bak:
-	cd build && cmake .. && make prepare_bak
