--- a/mit6824_lab1/config/generate_Log_profile.yaml
+++ b/mit6824_lab1/config/generate_Log_profile.yaml
@@ -1,18 +1,16 @@
 ip: 192.168.83.130
-port: 9000
+port: 9999
 zookeeper_ip: 192.168.83.130
 zookeeper_port: 9999
-map_task_thread_num: 10
-max_map_task: 10000
 max_channel_num: 10000
 reducer_num: 5
-split_size: 500
+split_size: 40
 file_list: testfile.txt
 thread_num: 5
-log_name: mapper.log
-log_path: /home/imagine/MIT6824/Imagine_Demo/mit6824_lab1/test/log/
+log_name: imagine_muduo_log.log
+log_path: /home/imagine/MIT6824/Imagine_Demo/mit6824_lab1/log/
 max_log_file_size: 104857600
 async_log: false
 singleton_log_mode: true
-log_title: Mapper
+log_title: ZooKeeper
 log_with_timestamp: true
