--- a/mit6824_lab1/config/mapper_profile.yaml
+++ b/mit6824_lab1/config/mapper_profile.yaml
@@ -6,11 +6,11 @@ map_task_thread_num: 10
 max_map_task: 10000
 max_channel_num: 10000
 reducer_num: 5
-split_size: 500
+split_size: 10240
 file_list: testfile.txt
 thread_num: 5
 log_name: mapper.log
-log_path: /home/imagine/MIT6824/Imagine_Demo/mit6824_lab1/test/log/
+log_path: ../log/
 max_log_file_size: 104857600
 async_log: false
 singleton_log_mode: true
